Migrate from Java 11 to Java 23
- Update Maven compiler plugin source/target from 11 to 23
- Update javadoc plugin source from 11 to 23
- Remove JDK 11 header restriction workarounds from HttpUtils.java
- Simplify DISALLOWED_REQUEST_HEADERS to only include content-length
- Remove setPropertyIfUnset method (no longer needed for Java 23)
- Update CI workflow to test on Java 23
- Add Java 23 setup to CodeQL workflow
- Update README to require JDK23 or later

This is a breaking change that makes the library incompatible with Java 11-22.

Co-Authored-By: chris.diaz@cognition.ai <diaz9797@gmail.com>